# GHScraper

./: Cargo.toml
src/: main.rs
src/api_fetcher/: fetcher.rs  gh_repository.rs  mod.rs
src/config/: config.rs
src/repo/: cloner.rs  mod.rs
