[package]
name = "gh-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
dirs = "5.0.0"
serde = {version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
reqwest = "0.11.16"
git2 = "0.17.1"